fixed overlapping headings issue mobile| updated css for services icon-box

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -608,6 +608,7 @@ section {
 --------------------------------------------------------------*/
 .services .icon-box {
   padding: 30px;
+  width: 100%;
   min-height: 100px;
   position: relative;
   overflow: hidden;
